--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -164,7 +164,7 @@
                                                             </a>
 
                                                             <p class="text-center" style="font-size: 1.1rem; font-weight: 500;">
-                                                                <%= result.won ? result.skips === 0 ? 'Point faible, trop fort·e !' : 'Pas mal 😉' : 'Vous ne l\'avez pas eu. Vous aurez plus de chance demain !' %>
+                                                                <%= result.text %>
                                                             </p>
 
                                                             <div class="mt-1 mb-5 text-center">
