--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -334,7 +334,7 @@
                                                                 <div class="col">
                                                                     <div class="progressbg h-4">
                                                                         <div class="progress progressbg-progress">
-                                                                            <div class="progress-bar bg-secondary" style="width: auto" role="progressbar"></div>
+                                                                            <div class="progress-bar bg-secondary" style="width: 6%" role="progressbar"></div>
                                                                         </div>
                                                                         <div class="progressbg-text text-white d-flex align-items-center">0</div>
                                                                     </div>
