--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -250,15 +250,15 @@
                                                         <% for(const rank of ranking) { %>
                                                         <div class="list-group-item">
                                                             <div class="row align-items-center">
-                                                                <div class="col-auto rank">
+                                                                <div class="col-auto">
                                                                     <span class="avatar"><%= rank.rank %></span>
                                                                 </div>
-                                                                <div class="col-auto">
+                                                                <a href="#" data-member-id="<%= rank.memberId %>" class="col-auto player-stats">
                                                                     <span class="avatar" style="background-image: url(<%= rank.avatar %>)"></span>
-                                                                </div>
-                                                                <div class="col text-truncate">
-                                                                    <span class="text-reset d-block" data-member-id="<%= rank.attackerId %>"><%= rank.name %></span>
-                                                                </div>
+                                                                </a>
+                                                                <a href="#" data-member-id="<%= rank.memberId %>" class="col text-truncate player-stats">
+                                                                    <span class="text-reset d-block"><%= rank.name %></span>
+                                                                </a>
                                                                 <div class="col-auto">
                                                                     <%= rank.count %>
                                                                 </div>
