--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -76,24 +76,12 @@
                                                         </div>
                                                         <% if(rankedle) { %>
                                                             <% if(!result) { %>
-                                                            <div id="step-1" class="step p-2 mb-2 d-flex align-items-center step-active">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
-                                                            <div id="step-2" class="step p-2 mb-2 d-flex align-items-center">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
-                                                            <div id="step-3" class="step p-2 mb-2 d-flex align-items-center">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
-                                                            <div id="step-4" class="step p-2 mb-2 d-flex align-items-center">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
-                                                            <div id="step-5" class="step p-2 mb-2 d-flex align-items-center">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
-                                                            <div id="step-6" class="step p-2 mb-2 d-flex align-items-center">
-                                                                <div class="w-5 h-5"></div>
-                                                            </div>
+                                                            <div id="step-1" class="step p-2 mb-2 d-flex align-items-center step-active"></div>
+                                                            <div id="step-2" class="step p-2 mb-2 d-flex align-items-center"></div>
+                                                            <div id="step-3" class="step p-2 mb-2 d-flex align-items-center"></div>
+                                                            <div id="step-4" class="step p-2 mb-2 d-flex align-items-center"></div>
+                                                            <div id="step-5" class="step p-2 mb-2 d-flex align-items-center"></div>
+                                                            <div id="step-6" class="step p-2 mb-2 d-flex align-items-center"></div>
                                                             
                                                             <div class="my-5 text-center">
                                                                 <p>Montez le son et cliquez pour démarrer la musique !</p>
